examples/test/testpolicy10931.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10931
  namespace: namespace313
spec:
  podSelector:
    matchLabels:
      key15: value31
      key35: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value14
          key0: value21
      podSelector:
        matchLabels:
          key42: value19
          key27: value45
          key48: value48
